# dre-dimura

./: .gitignore  CMakeLists.txt
.github/workflows/: beatconnect-build.yml  build.yml
Resources/WebUI/assets/: index.css  index.js
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PreampDSP.cpp  PreampDSP.h
web-ui/: index.html  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/: ActivationDialog.tsx  ActivationScreen.tsx  Knob.tsx  PreampTooltip.tsx  PresetSelector.tsx
web-ui/src/data/: presets.ts
web-ui/src/hooks/: useActivation.ts  useJuceParam.ts
web-ui/src/lib/: juce-bridge.ts
